--- a/contact.html
+++ b/contact.html
@@ -268,6 +268,66 @@
         padding: 40px 20px;
       }
     }
+
+    /* Newsletter Custom Popup */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.popup-content {
+  background: white;
+  padding: 30px 40px;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+  text-align: center;
+  animation: slideDown 0.4s ease;
+}
+
+.popup-content h2 {
+  color: #007bff;
+  margin-bottom: 10px;
+}
+
+.popup-content p {
+  color: #333;
+  font-size: 16px;
+}
+
+.popup-content button {
+  margin-top: 15px;
+  background: #007bff;
+  color: white;
+  padding: 10px 22px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.popup-content button:hover {
+  background: #0056b3;
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
   </style>
 </head>
 <body>
@@ -401,6 +461,30 @@
       alert("🎉 Thank you for subscribing to our newsletter!");
       e.target.reset();
     }
+
+    function subscribeNewsletter(e) {
+  e.preventDefault();
+
+  // Show custom popup
+  document.getElementById("newsletter-popup").style.display = "flex";
+
+  // Clear the input
+  e.target.reset();
+}
+
+function closeNewsletterPopup() {
+  document.getElementById("newsletter-popup").style.display = "none";
+}
+
   </script>
+  <!-- Custom Newsletter Confirmation Popup -->
+<div id="newsletter-popup" class="popup-overlay">
+  <div class="popup-content">
+    <h2>📬 You're Subscribed!</h2>
+    <p>Thanks for joining our newsletter. Stay tuned for tropical deals! 🌴</p>
+    <button onclick="closeNewsletterPopup()">Awesome!</button>
+  </div>
+</div>
+
 </body>
 </html>
