error soving of 3 seconds wait

--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
   </section>
 
   <!-- Confirmation Popup -->
-  <div id="confirmation-popup" class="popup-overlay">
+  <!-- Loading Spinner Overlay -->
+<div id="loading-overlay" class="loading-overlay">
+  <div class="spinner"></div>
+</div>
+
     <div class="popup-content">
       <h2>🎉 Booking Confirmed!</h2>
       <p>Thank you for booking with us.</p>
