--- a/index.html
+++ b/index.html
@@ -186,7 +186,27 @@
     });
   }, 2000); // 3 seconds
 });
+function closePopup() {
+  const popup = document.getElementById("confirmation-popup");
+  if (popup) popup.style.display = "none";
+}
+
+const popup = document.getElementById("confirmation-popup");
+if (popup) {
+  popup.style.display = "flex";
+}
+
 
   </script>
+  <!-- Confirmation Popup -->
+<div id="confirmation-popup" class="popup-overlay" style="display: none;">
+  <div class="popup-content">
+    <h2>🎉 Booking Confirmed!</h2>
+    <p>Thank you for booking with us.</p>
+    <p>Our support team will contact you within 5 minutes.</p>
+    <button onclick="closePopup()">OK</button>
+  </div>
+</div>
+
 </body>
 </html>
