--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Resort Booking</title>
   <link rel="stylesheet" href="resort.css" />
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-  
 </head>
 <body>
 
@@ -15,12 +14,10 @@
     <a href="index.html" class="logo">
       <img src="images/logo.png" alt="ResortBooking Logo" />
     </a>
-
     <nav class="nav-links" id="nav-links">
       <ul>
         <li><a href="#hero">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </nav>
@@ -98,12 +95,13 @@
     </form>
   </section>
 
-  <!-- Confirmation Popup -->
   <!-- Loading Spinner Overlay -->
-<div id="loading-overlay" class="loading-overlay">
-  <div class="spinner"></div>
-</div>
+  <div id="loading-overlay" class="loading-overlay" style="display: none;">
+    <div class="spinner"></div>
+  </div>
 
+  <!-- Confirmation Popup -->
+  <div id="confirmation-popup" class="popup-overlay" style="display: none;">
     <div class="popup-content">
       <h2>🎉 Booking Confirmed!</h2>
       <p>Thank you for booking with us.</p>
@@ -124,13 +122,24 @@
     }
 
     function closePopup() {
-      document.getElementById("confirmation-popup").style.display = "none";
+      const popup = document.getElementById("confirmation-popup");
+      if (popup) popup.style.display = "none";
     }
 
     window.addEventListener("click", function(e) {
       const dropdown = document.getElementById("notificationDropdown");
       if (!e.target.closest(".notification-wrapper")) {
         dropdown.style.display = "none";
+      }
+    });
+
+    // Only show popup if booking was just submitted
+    window.addEventListener("DOMContentLoaded", () => {
+      const wasConfirmed = localStorage.getItem("bookingConfirmed");
+      if (wasConfirmed === "true") {
+        const popup = document.getElementById("confirmation-popup");
+        if (popup) popup.style.display = "flex";
+        localStorage.removeItem("bookingConfirmed");
       }
     });
   </script>
@@ -149,64 +158,44 @@
     const form = document.querySelector(".booking-form");
 
     form.addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const formData = new FormData(form);
-  const bookingData = Object.fromEntries(formData.entries());
+      e.preventDefault();
+      const formData = new FormData(form);
+      const bookingData = Object.fromEntries(formData.entries());
 
-  // Show loading spinner
-  document.getElementById("loading-overlay").style.display = "flex";
+      // Show loader
+      document.getElementById("loading-overlay").style.display = "flex";
 
-  // Simulate 3-second loading
-  setTimeout(async () => {
-    const { error } = await supabase.from("bookings").insert([bookingData]);
-    if (error) {
-      document.getElementById("loading-overlay").style.display = "none";
-      alert("❌ Failed to save booking.");
-      return;
-    }
+      setTimeout(async () => {
+        const { error } = await supabase.from("bookings").insert([bookingData]);
+        if (error) {
+          document.getElementById("loading-overlay").style.display = "none";
+          alert("❌ Failed to save booking.");
+          return;
+        }
 
-    emailjs.send("service_x87fn9r", "template_hyi0a0p", {
-      user_email: bookingData.email,
-      location: bookingData.location,
-      resort: bookingData.resort,
-      checkin: bookingData.checkin,
-      checkout: bookingData.checkout,
-      guests: bookingData.guests,
-      rooms: bookingData.rooms,
-      requests: bookingData.requests || "No special request provided."
-    })
-    .then(() => {
-      form.reset();
-      document.getElementById("loading-overlay").style.display = "none";
-      document.getElementById("confirmation-popup").style.display = "flex";
-    })
-    .catch(() => {
-      document.getElementById("loading-overlay").style.display = "none";
-      alert("Booking saved, but email failed.");
+        emailjs.send("service_x87fn9r", "template_hyi0a0p", {
+          user_email: bookingData.email,
+          location: bookingData.location,
+          resort: bookingData.resort,
+          checkin: bookingData.checkin,
+          checkout: bookingData.checkout,
+          guests: bookingData.guests,
+          rooms: bookingData.rooms,
+          requests: bookingData.requests || "No special request provided."
+        })
+        .then(() => {
+          form.reset();
+          document.getElementById("loading-overlay").style.display = "none";
+          localStorage.setItem("bookingConfirmed", "true");
+          location.reload(); // reload to trigger popup safely
+        })
+        .catch(() => {
+          document.getElementById("loading-overlay").style.display = "none";
+          alert("Booking saved, but email failed.");
+        });
+      }, 3000); // 3 seconds loading
     });
-  }, 2000); // 3 seconds
-});
-function closePopup() {
-  const popup = document.getElementById("confirmation-popup");
-  if (popup) popup.style.display = "none";
-}
-
-const popup = document.getElementById("confirmation-popup");
-if (popup) {
-  popup.style.display = "flex";
-}
-
-
   </script>
-  <!-- Confirmation Popup -->
-<div id="confirmation-popup" class="popup-overlay" style="display: none;">
-  <div class="popup-content">
-    <h2>🎉 Booking Confirmed!</h2>
-    <p>Thank you for booking with us.</p>
-    <p>Our support team will contact you within 5 minutes.</p>
-    <button onclick="closePopup()">OK</button>
-  </div>
-</div>
 
 </body>
 </html>
